Reword the overviews

--- a/citely-web/src/main/resources/Messages_en.properties
+++ b/citely-web/src/main/resources/Messages_en.properties
@@ -1,2 +1,4 @@
 citely.title = Hola Mundo
-citely.projects.overview = "Here are your projects, which group references together for some purpose."
+citely.projects.overview = Projects are groups of references brought together for some purpose.  References can be in more than one project.
+citely.tags.overview = Tags are labels that are annotated on references.  References can have many tags.  Tags are searchable, and help organize material so it can be found in the future.
+citely.references.overview = References are the elemental piece of information in Citely.  References are citations you wish to collect and group together.
