--- a/citely-web/src/main/resources/Messages_en.properties
+++ b/citely-web/src/main/resources/Messages_en.properties
@@ -1,4 +1,5 @@
-citely.title = Hola Mundo
+citely.title = Citely
+citely.home.overview = Welcome to Citely! Citely is a citation manager that allows you to track your research as you perform it. Make sure you attribute your sources properly, by taking the hassle out of bibliography management.
 citely.projects.overview = Projects are groups of references brought together for some purpose.  References can be in more than one project.
 citely.tags.overview = Tags are labels that are annotated on references.  References can have many tags.  Tags are searchable, and help organize material so it can be found in the future.
 citely.references.overview = References are the elemental piece of information in Citely.  References are citations you wish to collect and group together.
